build/log/idf_py_stdout_output_26168
[1/9] Performing build step for 'bootloader'
[1/1] cmd.exe /C "cd /D C:\Users\jovic\wes-hack\build\bootloader\esp-idf\esptool_py && C:\Espressif\python_env\idf5.0_py3.11_env\Scripts\python.exe C:/Espressif/frameworks/esp-idf-v5.0.4/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x1000 C:/Users/jovic/wes-hack/build/bootloader/bootloader.bin"
Bootloader binary size 0x6760 bytes. 0x8a0 bytes (8%) free.
[2/7] Building C object esp-idf/my_mqtt/CMakeFiles/__idf_my_mqtt.dir/my_mqtt.c.obj
FAILED: esp-idf/my_mqtt/CMakeFiles/__idf_my_mqtt.dir/my_mqtt.c.obj 
ccache C:\Espressif\tools\xtensa-esp32-elf\esp-2022r1-11.2.0\xtensa-esp32-elf\bin\xtensa-esp32-elf-gcc.exe -DMBEDTLS_CONFIG_FILE=\"mbedtls/esp_config.h\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -IC:/Users/jovic/wes-hack/build/config -IC:/Users/jovic/wes-hack/components/my_mqtt -IC:/Espressif/frameworks/esp-idf-v5.0.4/components/newlib/platform_include -IC:/Espressif/frameworks/esp-idf-v5.0.4/components/freertos/FreeRTOS-Kernel/include -IC:/Espressif/frameworks/esp-idf-v5.0.4/components/freertos/esp_additions/include/freertos -IC:/Espressif/frameworks/esp-idf-v5.0.4/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -IC:/Espressif/frameworks/esp-idf-v5.0.4/components/freertos/esp_additions/include -IC:/Espressif/frameworks/esp-idf-v5.0.4/components/esp_hw_support/include -IC:/Espressif/frameworks/esp-idf-v5.0.4/components/esp_hw_support/include/soc -IC:/Espressif/frameworks/esp-idf-v5.0.4/components/esp_hw_support/include/soc/esp32 -IC:/Espressif/frameworks/esp-idf-v5.0.4/components/esp_hw_support/port/esp32/. -IC:/Espressif/frameworks/esp-idf-v5.0.4/components/esp_hw_support/port/esp32/private_include -IC:/Espressif/frameworks/esp-idf-v5.0.4/components/heap/include -IC:/Espressif/frameworks/esp-idf-v5.0.4/components/log/include -IC:/Espressif/frameworks/esp-idf-v5.0.4/components/soc/include -IC:/Espressif/frameworks/esp-idf-v5.0.4/components/soc/esp32/. -IC:/Espressif/frameworks/esp-idf-v5.0.4/components/soc/esp32/include -IC:/Espressif/frameworks/esp-idf-v5.0.4/components/hal/esp32/include -IC:/Espressif/frameworks/esp-idf-v5.0.4/components/hal/include -IC:/Espressif/frameworks/esp-idf-v5.0.4/components/hal/platform_port/include -IC:/Espressif/frameworks/esp-idf-v5.0.4/components/esp_rom/include -IC:/Espressif/frameworks/esp-idf-v5.0.4/components/esp_rom/include/esp32 -IC:/Espressif/frameworks/esp-idf-v5.0.4/components/esp_rom/esp32 -IC:/Espressif/frameworks/esp-idf-v5.0.4/components/esp_common/include -IC:/Espressif/frameworks/esp-idf-v5.0.4/components/esp_system/include -IC:/Espressif/frameworks/esp-idf-v5.0.4/components/esp_system/port/soc -IC:/Espressif/frameworks/esp-idf-v5.0.4/components/esp_system/port/include/private -IC:/Espressif/frameworks/esp-idf-v5.0.4/components/xtensa/include -IC:/Espressif/frameworks/esp-idf-v5.0.4/components/xtensa/esp32/include -IC:/Espressif/frameworks/esp-idf-v5.0.4/components/lwip/include -IC:/Espressif/frameworks/esp-idf-v5.0.4/components/lwip/include/apps -IC:/Espressif/frameworks/esp-idf-v5.0.4/components/lwip/include/apps/sntp -IC:/Espressif/frameworks/esp-idf-v5.0.4/components/lwip/lwip/src/include -IC:/Espressif/frameworks/esp-idf-v5.0.4/components/lwip/port/esp32/include -IC:/Espressif/frameworks/esp-idf-v5.0.4/components/lwip/port/esp32/include/arch -IC:/Espressif/frameworks/esp-idf-v5.0.4/components/driver/include -IC:/Espressif/frameworks/esp-idf-v5.0.4/components/driver/deprecated -IC:/Espressif/frameworks/esp-idf-v5.0.4/components/driver/esp32/include -IC:/Espressif/frameworks/esp-idf-v5.0.4/components/esp_pm/include -IC:/Espressif/frameworks/esp-idf-v5.0.4/components/esp_ringbuf/include -IC:/Espressif/frameworks/esp-idf-v5.0.4/components/mqtt/esp-mqtt/include -IC:/Espressif/frameworks/esp-idf-v5.0.4/components/esp_event/include -IC:/Espressif/frameworks/esp-idf-v5.0.4/components/tcp_transport/include -IC:/Espressif/frameworks/esp-idf-v5.0.4/components/esp-tls -IC:/Espressif/frameworks/esp-idf-v5.0.4/components/esp-tls/esp-tls-crypto -IC:/Espressif/frameworks/esp-idf-v5.0.4/components/mbedtls/port/include -IC:/Espressif/frameworks/esp-idf-v5.0.4/components/mbedtls/mbedtls/include -IC:/Espressif/frameworks/esp-idf-v5.0.4/components/mbedtls/mbedtls/library -IC:/Espressif/frameworks/esp-idf-v5.0.4/components/mbedtls/esp_crt_bundle/include -IC:/Espressif/frameworks/esp-idf-v5.0.4/components/nvs_flash/include -IC:/Espressif/frameworks/esp-idf-v5.0.4/components/esp_partition/include -IC:/Espressif/frameworks/esp-idf-v5.0.4/components/esp_netif/include -IC:/Espressif/frameworks/esp-idf-v5.0.4/components/protocol_examples_common/include -IC:/Users/jovic/wes-hack/components/json/cJSON -IC:/Users/jovic/wes-hack/components/temp_hum_sensor -IC:/Users/jovic/wes-hack/components/tictactoe -mlongcalls -Wno-frame-address  -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fmacro-prefix-map=C:/Users/jovic/wes-hack=. -fmacro-prefix-map=C:/Espressif/frameworks/esp-idf-v5.0.4=/IDF -fstrict-volatile-bitfields -Wno-error=unused-but-set-variable -fno-jump-tables -fno-tree-switch-conversion -DconfigENABLE_FREERTOS_DEBUG_OCDAWARE=1 -std=gnu17 -Wno-old-style-declaration -D_GNU_SOURCE -DIDF_VER=\"v5.0.4-dirty\" -DESP_PLATFORM -D_POSIX_READER_WRITER_LOCKS -MD -MT esp-idf/my_mqtt/CMakeFiles/__idf_my_mqtt.dir/my_mqtt.c.obj -MF esp-idf\my_mqtt\CMakeFiles\__idf_my_mqtt.dir\my_mqtt.c.obj.d -o esp-idf/my_mqtt/CMakeFiles/__idf_my_mqtt.dir/my_mqtt.c.obj -c C:/Users/jovic/wes-hack/components/my_mqtt/my_mqtt.c
C:/Users/jovic/wes-hack/components/my_mqtt/my_mqtt.c: In function 'mqtt5_event_handler':
C:/Users/jovic/wes-hack/components/my_mqtt/my_mqtt.c:233:40: error: 'tictactoe_handler_t' has no member named 'indexX'; did you mean 'index_of_X'?
  233 |                             game_state.indexX[i] = ix->valueint;
      |                                        ^~~~~~
      |                                        index_of_X
C:/Users/jovic/wes-hack/components/my_mqtt/my_mqtt.c:246:39: error: 'tictactoe_handler_t' has no member named 'indexO'
  246 |                             game_state.indexO[i] = io->valueint;
      |                                       ^
C:/Users/jovic/wes-hack/components/my_mqtt/my_mqtt.c:161:10: warning: unused variable 'data' [-Wunused-variable]
  161 |     char data[2500];
      |          ^~~~
C:/Users/jovic/wes-hack/components/my_mqtt/my_mqtt.c:160:10: warning: unused variable 'topic' [-Wunused-variable]
  160 |     char topic[20];
      |          ^~~~~
C:/Users/jovic/wes-hack/components/my_mqtt/my_mqtt.c: In function 'my_mqtt_task':
C:/Users/jovic/wes-hack/components/my_mqtt/my_mqtt.c:295:11: warning: unused variable 'msg' [-Wunused-variable]
  295 |     char* msg;
      |           ^~~
In file included from C:/Users/jovic/wes-hack/components/my_mqtt/my_mqtt.c:34:
C:/Users/jovic/wes-hack/components/my_mqtt/my_mqtt.c: At top level:
C:/Users/jovic/wes-hack/components/temp_hum_sensor/temp_hum_sensor.h:19:16: warning: 'sht31_crc' declared 'static' but never defined [-Wunused-function]
   19 | static uint8_t sht31_crc(uint8_t *data);
      |                ^~~~~~~~~
C:/Users/jovic/wes-hack/components/temp_hum_sensor/temp_hum_sensor.h:20:18: warning: 'sht31_read_temp_humi' declared 'static' but never defined [-Wunused-function]
   20 | static esp_err_t sht31_read_temp_humi(float *temp, float *humi);
      |                  ^~~~~~~~~~~~~~~~~~~~
C:/Users/jovic/wes-hack/components/my_mqtt/my_mqtt.c:48:13: warning: '_create_demo_application' declared 'static' but never defined [-Wunused-function]
   48 | static void _create_demo_application(void);
      |             ^~~~~~~~~~~~~~~~~~~~~~~~
C:/Users/jovic/wes-hack/components/my_mqtt/my_mqtt.c:92:14: warning: 'create_json_payload' defined but not used [-Wunused-function]
   92 | static char* create_json_payload(void) {
      |              ^~~~~~~~~~~~~~~~~~~
ninja: build stopped: subcommand failed.
